added py requirements

--- a/index.html
+++ b/index.html
@@ -50,7 +50,10 @@
   </head>
   <body>
     <h1>Cheatboard Live 📋📍</h1>
-    <div class="clip-container" id="clip">Waiting for input...</div>
+    <div class="clip-container" id="clip">
+      Waiting for input... 
+      (If not done yet, run py cheartboard.py)
+    </div>
     <button id="copyBtn" class="copy-btn" type="button">📋 Copy Text</button>
 
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
